--- a/css/qgis2web.css
+++ b/css/qgis2web.css
@@ -53,7 +53,7 @@
         }
         }
         .fa, .leaflet-container, a {
-            color: #675ee6 !important;
+            color: #444444 !important;
         }
         .leaflet-control-zoom-in, .leaflet-control-zoom-out,
         .leaflet-control-locate a,
@@ -62,14 +62,14 @@
          .leaflet-control-measure {
             background-color: #f8f8f8 !important;
             border-radius: 0px !important;
-            color: #675ee6 !important;
+            color: #444444 !important;
         }
         .abstract {
             font: bold 18px 'Lucida Console', Monaco, monospace;
             text-indent: 1px;
             background-color: #f8f8f8 !important;
             width: 30px !important;
-            color: #675ee6 !important;
+            color: #444444 !important;
             height: 30px !important;
             text-align: center !important;
             line-height: 30px !important;
@@ -78,7 +78,7 @@
             padding: 6px 8px;
             font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
             background-color:#f8f8f8 !important;
-            color: #675ee6 !important;
+            color: #444444 !important;
             box-shadow: 0 0 15px rgba(0,0,0,0.2);
             border-radius: 5px;
             max-width: 40%;
@@ -135,7 +135,7 @@
             height: 30px !important;
             border-radius: 0px !important;
             background-color: #f8f8f8 !important;
-            color: #675ee6 !important;
+            color: #444444 !important;
             font-size: 13px;
             line-height: 30px;
             text-align: center;
